# IpcLib

./: CMakeLists.txt  LICENSE  README.md
Libraries/: CMakeLists.txt
Libraries/IpcLib/: CMakeLists.txt  IpcBuffer.cpp  IpcBuffer.hpp  IpcChannelType.hpp  IpcManager.cpp  IpcManager.hpp  IpcMessage.cpp  IpcMessage.hpp  IpcMetadata.cpp  IpcMetadata.hpp  IpcReceiverChannel.cpp  IpcReceiverChannel.hpp  IpcResult.hpp  IpcSenderChannel.cpp  IpcSenderChannel.hpp  IpcShm.cpp  IpcShm.hpp  IpcShmReceiver.cpp  IpcShmReceiver.hpp  IpcShmSender.cpp  IpcShmSender.hpp  IpcThread.cpp  IpcThread.hpp
Libraries/Utils/: CMakeLists.txt  String.cpp  String.hpp  Time.cpp  Time.hpp  Utils.cpp  Utils.hpp
Programs/: CMakeLists.txt
Programs/ipc_test_receiver/: CMakeLists.txt  main.cpp
Programs/ipc_test_sender/: CMakeLists.txt  main.cpp
Programs/mathTool/: CMakeLists.txt  main.cpp
Tests/: CMakeLists.txt  main.cpp
